2025-08-26T02:02:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17225788455 # 1183
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-26
* notice: last 14d: unq all: 8 27
* notice: prev accum: outdated-unq outdated-all / unq all: 1170 5810 / 1184 5836
* notice: next accum: outdated-unq outdated-all / unq all: 1170 5810 / 1185 5837
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-25]

2025-08-25T12:55:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17209464258 # 1182
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-25
* notice: last 14d: unq all: 7 26
* notice: prev accum: outdated-unq outdated-all / unq all: 1169 5809 / 1184 5836
* notice: next accum: outdated-unq outdated-all / unq all: 1170 5810 / 1184 5836
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-11] / []

2025-08-24T12:49:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17188905494 # 1180
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-24
* notice: last 14d: unq all: 7 27
* notice: prev accum: outdated-unq outdated-all / unq all: 1168 5808 / 1184 5836
* notice: next accum: outdated-unq outdated-all / unq all: 1169 5809 / 1184 5836
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-10] / []

2025-08-23T12:48:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17175645123 # 1178