@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-26T02:02:58Z",
-  "count_outdated" : 5810,
-  "uniques_outdated" : 1170,
+  "timestamp" : "2025-08-26T12:56:15Z",
+  "count_outdated" : 5811,
+  "uniques_outdated" : 1171,
   "count" : 5837,
   "uniques" : 1185,
   "views" : [
-    {
-      "timestamp": "2025-08-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-13T00:00:00Z",
       "count": 3,
