@@ -1,12 +1,7 @@
 {
-  "count": 27,
+  "count": 26,
   "uniques": 8,
   "views": [
-    {
-      "timestamp": "2025-08-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-08-13T00:00:00Z",
       "count": 3,
